<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 第一行 -->
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A0A0A0"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cur_press"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cur_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cur_temp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cur_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 第二行 -->
    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A0A0A0"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_press"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/product_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benchmark_press"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/benchmark_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 第三行 -->
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A0A0A0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delta_press"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/delta_press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="" />
</LinearLayout>
